--- a/Assets/Prefabs/UI/UIBuilder/CombatTurnPanel.uxml
+++ b/Assets/Prefabs/UI/UIBuilder/CombatTurnPanel.uxml
@@ -1,5 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement name="Panel" picking-mode="Ignore" style="flex-grow: 1;">
+    <ui:Template name="CombatActionUIPanel" src="project://database/Assets/Prefabs/UI/UIBuilder/CombatActionUIPanel.uxml?fileID=9197481963319205126&amp;guid=16fee6b4aff33fa4b8b6727f5775f195&amp;type=3#CombatActionUIPanel" />
+    <ui:VisualElement name="Panel" picking-mode="Ignore" style="flex-grow: 1; margin-bottom: 10px;">
         <ui:VisualElement name="CombatCharacterContainer" picking-mode="Ignore" style="flex-grow: 0; background-color: rgb(214, 214, 214); height: 20%; flex-shrink: 0; justify-content: center; align-self: center; width: auto; align-items: stretch; flex-direction: row; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px;" />
+        <ui:Instance template="CombatActionUIPanel" name="CombatActionUIPanel" style="margin-top: 10px;" />
     </ui:VisualElement>
 </ui:UXML>
