--- a/Assets/Prefabs/UI/UIBuilder/CharacterCardPanel.uxml
+++ b/Assets/Prefabs/UI/UIBuilder/CharacterCardPanel.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:Template name="CharacterCardPanelTemplate" src="project://database/Assets/Prefabs/UI/UIBuilder/CharacterCardPanelTemplate.uxml?fileID=9197481963319205126&amp;guid=a9388beb51136ac43a3658d3af79048e&amp;type=3#CharacterCardPanelTemplate" />
-    <ui:VisualElement name="Panel" picking-mode="Ignore" style="flex-grow: 1; flex-direction: column-reverse;">
-        <ui:VisualElement name="Frame" picking-mode="Ignore" style="flex-grow: 0; flex-direction: row; align-self: auto; justify-content: center; align-items: center; flex-shrink: 0; flex-wrap: nowrap; flex-basis: 20%;">
+    <ui:VisualElement name="Panel" picking-mode="Ignore" style="flex-direction: column-reverse; flex-basis: 100%;">
+        <ui:VisualElement name="Frame" picking-mode="Ignore" style="flex-direction: row; align-self: auto; justify-content: center; align-items: center; flex-shrink: 0; flex-wrap: nowrap; flex-basis: 20%;">
             <ui:Instance template="CharacterCardPanelTemplate" name="CharacterCardPanel1" picking-mode="Ignore" style="align-self: flex-end; justify-content: center; flex-shrink: 0; height: 100%; flex-basis: 20%;" />
             <ui:Instance template="CharacterCardPanelTemplate" name="CharacterCardPanel2" picking-mode="Ignore" style="align-self: flex-end; justify-content: center; flex-shrink: 0; height: 100%; flex-basis: 20%;" />
             <ui:Instance template="CharacterCardPanelTemplate" name="CharacterCardPanel3" picking-mode="Ignore" style="align-self: flex-end; justify-content: center; flex-shrink: 0; height: 100%; flex-basis: 20%;" />
