--- a/Assets/Prefabs/UI/UIBuilder/BaseUSS/BaseUSS.uss
+++ b/Assets/Prefabs/UI/UIBuilder/BaseUSS/BaseUSS.uss
@@ -1,13 +1,17 @@
 .baseButton {
     flex-basis: 100%;
-    background-color: rgba(188, 188, 188, 0);
     font-size: 25px;
     -unity-font-style: bold;
+    background-color: rgba(188, 188, 188, 0);
 }
 
-.baseButtonPointerEnter {
+.baseButton:hover {
     transition-property: background-color;
     transition-duration: 0.2s;
-    transition-delay: 0.05s;
-    background-color: rgba(255, 255, 255, 0.46);
+    scale: 1.2 1.2;
+    background-color: rgba(255, 255, 255, 0.45);
+}
+
+.baseButton:active {
+    background-color: rgb(196, 238, 255);
 }
